--- a/门店/门店/门店信息.md
+++ b/门店/门店/门店信息.md
@@ -24,13 +24,6 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>id</td>
-        <td>string</td>
-        <td>-</td>
-        <td></td>
-        <td>-</td>
-    </tr>
-    <tr>
         <td>name</td>
         <td>string</td>
         <td>是</td>
@@ -38,24 +31,10 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>code</td>
-        <td>string</td>
-        <td>-</td>
-        <td>编号</td>
-        <td>-</td>
-    </tr>
-    <tr>
         <td>contact</td>
         <td>Contact</td>
         <td>-</td>
         <td>联系人</td>
-        <td>见系统参数</td>
-    </tr>
-    <tr>
-        <td>sortIndex</td>
-        <td>int</td>
-        <td>-</td>
-        <td>排序</td>
         <td>-</td>
     </tr>
     <tr>
@@ -63,34 +42,13 @@
         <td>Status</td>
         <td>-</td>
         <td>状态</td>
-        <td>参见全局系统参数</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>appId</td>
         <td>string</td>
         <td>-</td>
         <td>连锁ID</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>appName</td>
-        <td>string</td>
-        <td>-</td>
-        <td>连锁名称</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>createdAt</td>
-        <td>datetime</td>
-        <td>-</td>
-        <td>创建时间</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>createdBy</td>
-        <td>datetime</td>
-        <td>-</td>
-        <td>创建人</td>
         <td>-</td>
     </tr>
 </table>
@@ -104,7 +62,7 @@ GET /shop/v1/shop
 ## 查看门店
 
 ```
-GET /shop/v1/:id
+GET /shop/v1/shop/:id
 ```
 
 ## 编辑
