--- a/门店/顾客/顾客信息.md
+++ b/门店/顾客/顾客信息.md
@@ -23,9 +23,9 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>mobile</td>
+        <td>shopId</td>
         <td>string</td>
-        <td>手机号</td>
+        <td>门店ID</td>
         <td>-</td>
     </tr>
     <tr>
@@ -35,16 +35,22 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>code</td>
+        <td>mrn</td>
         <td>string</td>
-        <td>编号</td>
+        <td>病历号</td>
         <td>-</td>
     </tr>
+    <tr>
+        <td>mobile</td>
+        <td>string</td>
+        <td>手机号</td>
+        <td>-</td>
+    </tr>    
     <tr>
         <td>gender</td>
         <td>Gender</td>
         <td>性别</td>
-        <td></td>
+        <td>male, female, unknown</td>
     </tr>
     <tr>
         <td>birthday</td>
@@ -53,9 +59,33 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>area</td>
-        <td>Area</td>
-        <td>区域</td>
+        <td>idcard</td>
+        <td>string</td>
+        <td>身份证</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>country</td>
+        <td>string</td>
+        <td>国家</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>province</td>
+        <td>string</td>
+        <td>省</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>city</td>
+        <td>string</td>
+        <td>市</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>county</td>
+        <td>string</td>
+        <td>区(县)</td>
         <td>-</td>
     </tr>
     <tr>
@@ -77,61 +107,25 @@
         <td>账户积分</td>
     </tr>
     <tr>
-        <td>level</td>
-        <td>CustomerLevel</td>
-        <td>会员等级</td>
+        <td>wechatNickname</td>
+        <td>string</td>
+        <td>微信昵称</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>lastSigninDateTime</td>
+        <td>wechatHeadimgurl</td>
+        <td>string</td>
+        <td>微信头像</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>LastSigninAt</td>
         <td>date</td>
         <td>最新签到时间</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>lastOptometryDateTime</td>
-        <td>date</td>
-        <td>最新验光时间</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>optometryCountTotal</td>
-        <td>int</td>
-        <td>累计验光次数</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>lastOrderDateTime</td>
-        <td>date</td>
-        <td>最新订单时间</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>orderCountTotal</td>
-        <td>int</td>
-        <td>累计订单数</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>orderAmountTotal</td>
-        <td>int</td>
-        <td>累计消费金额</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>lastActiveDateTime</td>
-        <td>date</td>
-        <td>最新活跃时间</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>wechatInfo</td>
-        <td>WechatInfo</td>
-        <td>微信信息</td>
-        <td>参见微信参数</td>
-    </tr>
-    <tr>
-        <td>tagList</td>
+        <td>tag</td>
         <td>List<String></td>
         <td>标签列表</td>
         <td>-</td>
@@ -160,36 +154,6 @@
         <td>状态</td>
         <td>参见全局系统参数</td>
     </tr>
-    <tr>
-        <td>appId</td>
-        <td>string</td>
-        <td>连锁ID</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>shopId</td>
-        <td>string</td>
-        <td>门店ID</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>createdDateTime</td>
-        <td>datetime</td>
-        <td>创建时间</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>createdBy</td>
-        <td>datetime</td>
-        <td>创建人</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>signin</td>
-        <td>boolean</td>
-        <td>今日是否签到</td>
-        <td>接口需要expand=signinStatus</td>
-    </tr>
 </table>
 
 ## 添加顾客
@@ -213,16 +177,16 @@ POST /customer/v1/customer
         <td>门店ID</td>
     </tr>
     <tr>
-        <td>mobile</td>
-        <td>string</td>
-        <td>-</td>
-        <td>手机号</td>
-    </tr>
-    <tr>
         <td>name</td>
         <td>string</td>
         <td>是</td>
         <td>姓名</td>
+    </tr>
+    <tr>
+        <td>mobile</td>
+        <td>string</td>
+        <td>-</td>
+        <td>手机号</td>
     </tr>
     <tr>
         <td>gender</td>
@@ -237,42 +201,46 @@ POST /customer/v1/customer
         <td>出生日期</td>
     </tr>
     <tr>
-        <td>area</td>
-        <td>Area</td>
+        <td>idcard</td>
+        <td>string</td>
+        <td>身份证</td>
         <td>-</td>
-        <td>区域</td>
+    </tr>
+    <tr>
+        <td>country</td>
+        <td>string</td>
+        <td>国家</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>province</td>
+        <td>string</td>
+        <td>省</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>city</td>
+        <td>string</td>
+        <td>市</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>county</td>
+        <td>string</td>
+        <td>区(县)</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>address</td>
+        <td>string</td>
+        <td>地址</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>address</td>
         <td>string</td>
         <td>-</td>
         <td>地址</td>
-    </tr>
-    <tr>
-        <td>wechatInfo</td>
-        <td>WechatInfo</td>
-        <td>-</td>
-        <td>微信信息</td>
-        <td>参见微信参数</td>
-    </tr>
-    <tr>
-        <td>tagList</td>
-        <td>List<String></td>
-        <td>-</td>
-        <td>标签列表</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>customerId</td>
-        <td>string</td>
-        <td>-</td>
-        <td>顾客ID</td>
-    </tr>
-    <tr>
-        <td>fromCustomerId</td>
-        <td>String</td>
-        <td>-</td>
-        <td>介绍人ID</td>
     </tr>
 </table>
 
@@ -281,35 +249,6 @@ POST /customer/v1/customer
 ```
 GET /customer/v1/customer
 ```
-
->请求参数
-
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>shopId</td>
-        <td>string</td>
-        <td>-</td>
-        <td>门店ID</td>
-    </tr>
-    <tr>
-        <td>createdDateTime</td>
-        <td>date</td>
-        <td>-</td>
-        <td>注册时间: start~end</td>
-    </tr>
-    <tr>
-        <td>sort</td>
-        <td>string</td>
-        <td>-</td>
-        <td>排序: 如: orderAmountTotal desc</td>
-    </tr>
-</table>
 
 ## 顾客关联账户列表
 
