--- a/门店/检查/检查套餐.md
+++ b/门店/检查/检查套餐.md
@@ -29,14 +29,8 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>itemIdList</td>
+        <td>item</td>
         <td>List<string></td>
-        <td>检查项ID列表</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>itemList</td>
-        <td>List<OptometryItem></td>
         <td>检查项列表</td>
         <td>-</td>
     </tr>
@@ -63,7 +57,7 @@
 ## 门店检查套餐列表
 
 ```
-GET /optometry/v1/optometry-combo
+GET /optometry/v1/combo
 ```
 > 请求参数
 
@@ -83,63 +77,5 @@ GET /optometry/v1/optometry-combo
 ## 查看检查套餐
 
 ```
-GET /optometry/v1/optometry-combo/:id
-```
-
-## 创建检查套餐
-
-```
-POST /optometry/v1/optometry-combo
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>shopId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>门店ID</td>
-    </tr>
-    <tr>
-        <td>name</td>
-        <td>string</td>
-        <td>是</td>
-        <td>名称</td>
-    </tr>
-    <tr>
-        <td>itemIdList</td>
-        <td>List<string></td>
-        <td>检查项ID列表</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>content</td>
-        <td>string</td>
-        <td>-</td>
-        <td>检查项内容描述</td>
-    </tr>
-    <tr>
-        <td>remark</td>
-        <td>string</td>
-        <td>-</td>
-        <td>备注</td>
-    </tr>
-</table>
-
-## 修改检查套餐
-
-```
-PATCH /optometry/v1/optometry-combo/:id
-```
-
-## 删除检查套餐
-
-```
-DELETE /optometry/v1/optometry-combo/:id
+GET /optometry/v1/combo/:id
 ```
