--- a/门店/检查/检查数据.md
+++ b/门店/检查/检查数据.md
@@ -87,7 +87,7 @@
 ## 检查列表
 
 ```
-GET /optometry/v1/optometry
+GET /optometry/v1/item
 ```
 > 请求参数
 
@@ -103,19 +103,9 @@ GET /optometry/v1/optometry
         <td>门店ID</td>
     </tr>
     <tr>
-        <td>familyId</td>
-        <td>-</td>
-        <td>家庭ID</td>
-    </tr>
-    <tr>
         <td>customerId</td>
         <td>-</td>
         <td>检查人ID</td>
-    </tr>
-    <tr>
-        <td>combo</td>
-        <td>-</td>
-        <td>检查套餐</td>
     </tr>
     <tr>
         <td>status</td>
@@ -124,56 +114,17 @@ GET /optometry/v1/optometry
     </tr>
 </table>
 
-## 查看检查单
+## 查看检查项
 
 ```
-GET /optometry/v1/optometry/:id
+GET /optometry/v1/item/:id
 ```
 
-## 创建检查单
+
+## 提交检查项数据
 
 ```
-POST /optometry/v1/optometry
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>shopId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>门店ID</td>
-    </tr>
-    <tr>
-        <td>customerId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>顾客ID</td>
-    </tr>
-    <tr>
-        <td>comboId</td>
-        <td>string</td>
-        <td>否</td>
-        <td>套餐ID</td>
-    </tr>
-    <tr>
-        <td>itemIdList</td>
-        <td>List<String></td>
-        <td>否</td>
-        <td>检查项目ID列表, 和套餐ID二选一</td>
-    </tr>
-</table>
-
-## 提交检查单数据
-
-```
-POST /optometry/v1/optometry/submit/:id
+POST /optometry/v1/item/data
 ```
 
 >请求参数
@@ -183,95 +134,23 @@ POST /optometry/v1/optometry/submit/:id
         <th style="width:60px;">类型</th>
         <th style="width:60px;">必填</th>
         <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>id</td>
+        <td>检查项ID</td>
+        <td>是</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>data</td>
-        <td>OptometryData</td>
+        <td>检查项数据</td>
         <td>是</td>
         <td>检查数据，见检查参数</td>
     </tr>
-</table>
-
-## 修改检查单
-
-```
-PATCH /optometry/v1/optometry/:id
-```
-
->请求参数
-<table>
     <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>inquiryType</td>
-        <td>string</td>
-        <td>是</td>
-        <td>调查表类型</td>
-    </tr>
-    <tr>
-        <td>itemList</td>
-        <td>List<String></td>
-        <td>是</td>
-        <td>检查项目列表</td>
+        <td>deviceId</td>
+        <td>检查设备ID</td>
+        <td>-</td>
+        <td>-</td>
     </tr>
 </table>
-
-## 完成检查
-
-```
-POST /optometry/v1/optometry/complete/:id
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>push</td>
-        <td>boolean</td>
-        <td>是</td>
-        <td>是否推送报告</td>
-    </tr>
-    <tr>
-        <td>evaluation</td>
-        <td>OptometryEvaluation</td>
-        <td>是</td>
-        <td>综合评估上下文，见检查参数</td>
-    </tr>
-</table>
-
-## 取消检查
-
-```
-POST /optometry/v1/optometry/cancel/:id
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>opContext</td>
-        <td>OpContext</td>
-        <td>是</td>
-        <td>操作信息，参见全局/系统参数</td>
-    </tr>
-</table>
-
-## 删除检查
-
-```
-DELETE /optometry/v1/optometry/:id
-```
