增加设备信息

--- a/门店/检查/检查参数.md
+++ b/门店/检查/检查参数.md
@@ -9,16 +9,16 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>user</td>
-        <td>IdName</td>
+        <td>userName</td>
+        <td>string</td>
         <td>操作人</td>
         <td>-</td>
     </tr>
     <tr>
         <td>result</td>
-        <td>OptometryResult</td>
+        <td>string</td>
         <td>检查结果</td>
-        <td>Ok("正常"),Myopia("近视"),AgedOk("中老年人正常或存在结石滤泡"),FundusHighRisk("眼底病变高危因素"),Abnormal("异常")</td>
+        <td>正常,近视,中老年人正常或存在结石滤泡,眼底病变高危因素,异常</td>
     </tr>
     <tr>
         <td>diagnosis</td>
