--- a/门店/检查/设备信息.md
+++ b/门店/检查/设备信息.md
@@ -108,7 +108,7 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>TransportGzip</td>
+        <td>transportGzip</td>
         <td>bool</td>
         <td>-</td>
         <td>是否gzip传输</td>
