--- a/门店/检查/检查数据.md
+++ b/门店/检查/检查数据.md
@@ -23,21 +23,15 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>user</td>
-        <td>User</td>
-        <td>创建员工信息</td>
-        <td>见/参数</td>
-    </tr>
-    <tr>
-        <td>family</td>
-        <td>Customer</td>
-        <td>顾客主账号</td>
+        <td>userName</td>
+        <td>string</td>
+        <td>创建员工姓名</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>customer</td>
-        <td>Customer</td>
-        <td>顾客</td>
+        <td>customerName</td>
+        <td>string</td>
+        <td>顾客名</td>
         <td>-</td>
     </tr>
     <tr>
@@ -47,34 +41,58 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>itemList</td>
-        <td>List<String></td>
-        <td>检查项列表</td>
-        <td>-</td>
-    </tr>
-    <tr>
         <td>data</td>
         <td>OptometryData</td>
         <td>调查表数据</td>
         <td>见检查参数</td>
     </tr>
     <tr>
-        <td>diagnosisInfo</td>
-        <td>Diagnosis</td>
-        <td>诊断数据</td>
-        <td>见检查参数</td>
+        <td>symptom</td>
+        <td>string</td>
+        <td>症状</td>
+        <td>-</td>
     </tr>
     <tr>
-        <td>cancelInfo</td>
-        <td>Operation</td>
-        <td>取消数据</td>
-        <td>见系统参数</td>
+        <td>pic</td>
+        <td>string</td>
+        <td>图片</td>
+        <td>多张图片用,分隔</td>
     </tr>
     <tr>
-        <td>completeInfo</td>
-        <td>Operation</td>
-        <td>完成信息</td>
-        <td>见全局/系统参数</td>
+        <td>device</td>
+        <td>Device</td>
+        <td>设备</td>
+        <td>参见设备</td>
+    </tr>
+    <tr>
+        <td>checkUsername</td>
+        <td>string</td>
+        <td>检查员工</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>checkDateTime</td>
+        <td>DateTime</td>
+        <td>检查日期时间</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>diagnosis</td>
+        <td>string</td>
+        <td>诊断</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>suggestion</td>
+        <td>string</td>
+        <td>建议</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>备注</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>status</td>
@@ -151,6 +169,36 @@ POST /optometry/v1/item/data
         <td>deviceId</td>
         <td>检查设备ID</td>
         <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>symptom</td>
+        <td>string</td>
+        <td>症状</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>pic</td>
+        <td>string</td>
+        <td>图片</td>
+        <td>多张图片用,分隔</td>
+    </tr>
+    <tr>
+        <td>diagnosis</td>
+        <td>string</td>
+        <td>诊断</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>suggestion</td>
+        <td>string</td>
+        <td>建议</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>备注</td>
         <td>-</td>
     </tr>
 </table>
