--- a/门店/商品/仓库信息.md
+++ b/门店/商品/仓库信息.md
@@ -33,16 +33,10 @@
         <td>是否允许退货</td>
         <td>-</td>
     </tr>
-    <tr>
-        <td>main</td>
-        <td>bool</td>
-        <td>是否默认仓库</td>
-        <td>-</td>
-    </tr>
 </table>
 
-## 分类列表
+## 仓库列表
 
 ```
-GET /product/v1/category
+GET /shop/v1/warehouse?shopId=:shopId
 ```
