--- a/门店/商品/商品分类.md
+++ b/门店/商品/商品分类.md
@@ -20,8 +20,8 @@
         <td>ProductType</td>
         <td>商品类型</td>
         <td>
-            Normal("普通"),
-            GSP("GSP"),
+            10("普通"),
+            20("GSP"),
         </td>
     </tr>
     <tr>
