--- a/门店/商品/基础信息.md
+++ b/门店/商品/基础信息.md
@@ -13,7 +13,7 @@
         <td>type</td>
         <td>ProductType</td>
         <td>商品类型</td>
-        <td>Normal("普通"),GSP("GSP")</td>
+        <td>10("普通"),20("GSP")</td>
     </tr>
     <tr>
         <td>attribute</td>
@@ -44,9 +44,15 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>category</td>
+        <td>category1</td>
         <td>string</td>
-        <td>分类</td>
+        <td>分类1</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>category2</td>
+        <td>string</td>
+        <td>分类2</td>
         <td>-</td>
     </tr>
     <tr>
@@ -140,17 +146,11 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>tagList</td>
+        <td>tag</td>
         <td>string</td>
         <td>标签</td>
         <td>-</td>
-    </tr>
-    <tr>
-        <td>stock</td>
-        <td>object</td>
-        <td>库存</td>
-        <td>key为仓库名, value为库存数量</td>
-    </tr>    
+    </tr>  
     <tr>
         <td>status</td>
         <td>Status</td>
@@ -231,7 +231,7 @@ POST /product/v1/product/import
         <td>type</td>
         <td>string</td>
         <td>是</td>
-        <td>商品类型: Normal("普通"),GSP("GSP")</td>
+        <td>商品类型: 10("普通"),20("GSP")</td>
     </tr>
     <tr>
         <td>category</td>
