--- a/门店/商品/库存查询.md
+++ b/门店/商品/库存查询.md
@@ -3,7 +3,7 @@
 ## 库存查询
 
 ```
-GET /product/v1/stock
+GET /stock/v1/stock
 ```
 
 >请求参数
@@ -21,27 +21,33 @@ GET /product/v1/stock
         <td>门店ID</td>
     </tr>
     <tr>
-        <td>category</td>
+        <td>category1</td>
         <td>string</td>
         <td>-</td>
-        <td>分类</td>
+        <td>分类1</td>
     </tr>
     <tr>
-        <td>stock.warehouse</td>
+        <td>category2</td>
         <td>string</td>
         <td>-</td>
-        <td>指定仓库, 用法 stock.warehouse=!null</td>
+        <td>分类2</td>
     </tr>
     <tr>
-        <td>stockCount</td>
+        <td>warehouse</td>
+        <td>string</td>
+        <td>-</td>
+        <td>只查指定仓库</td>
+    </tr>
+    <tr>
+        <td>instock</td>
         <td>int</td>
         <td>-</td>
-        <td>只看有货, 用法 stockCount=>0</td>
+        <td>只看有货, 用法 instock=1</td>
     </tr>
     <tr>
-        <td>其它过滤字段</td>
+        <td>keyword</td>
         <td>string</td>
         <td>-</td>
-        <td>-</td>
+        <td>搜索</td>
     </tr>
 </table>
