增加检查项

--- a/门店/检查/检查套餐.md
+++ b/门店/检查/检查套餐.md
@@ -30,7 +30,13 @@
     </tr>
     <tr>
         <td>item</td>
-        <td>List<string></td>
+        <td>string<string></td>
+        <td>检查项</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>itemList</td>
+        <td>list<string></td>
         <td>检查项列表</td>
         <td>-</td>
     </tr>
