所有检查项

--- a/门店/检查/检查套餐.md
+++ b/门店/检查/检查套餐.md
@@ -85,3 +85,23 @@ GET /optometry/v1/combo
 ```
 GET /optometry/v1/combo/:id
 ```
+
+## 所有检查项
+
+```
+GET /optometry/v1/item
+```
+> 请求参数
+
+<table>
+    <tr>
+        <th style="width:150px;">属性名称</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>shopId</td>
+        <td>-</td>
+        <td>门店ID</td>
+    </tr>
+</table>
