--- a/门店/处置/处置项目.md
+++ b/门店/处置/处置项目.md
@@ -173,3 +173,31 @@ GET /treatment/v1/item/:id
 ```
 DELETE /treatment/v1/item/:id
 ```
+
+## 删除(按套餐)
+
+```
+DELETE /treatment/v1/item/delete-by-combo
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>treatmentId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>处置ID</td>
+    </tr>
+    <tr>
+        <td>combo</td>
+        <td>string</td>
+        <td>是</td>
+        <td>套餐</td>
+    </tr>
+</table>
