--- a/门店/处置/处置项目.md
+++ b/门店/处置/处置项目.md
@@ -87,9 +87,9 @@ POST /treatment/v1/item/combo
         <td>处置ID</td>
     </tr>
     <tr>
-        <td>sourceId</td>
+        <td>combo</td>
         <td>string</td>
-        <td>套餐ID</td>
+        <td>套餐名</td>
         <td>-</td>
     </tr>
 </table>
@@ -115,7 +115,7 @@ POST /treatment/v1/item/optometryitem
         <td>处置ID</td>
     </tr>
     <tr>
-        <td>sourceId</td>
+        <td>itemId</td>
         <td>string</td>
         <td>检查项ID</td>
         <td>-</td>
@@ -143,7 +143,7 @@ POST /treatment/v1/item/product
         <td>处置ID</td>
     </tr>
     <tr>
-        <td>sourceId</td>
+        <td>stockId</td>
         <td>string</td>
         <td>库存ID</td>
         <td>-</td>
@@ -199,5 +199,61 @@ DELETE /treatment/v1/item/delete-by-combo
         <td>string</td>
         <td>是</td>
         <td>套餐</td>
+    </tr>
+</table>
+
+## 删除(按检查项)
+
+```
+DELETE /treatment/v1/item/delete-by-optometryitem
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>treatmentId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>处置ID</td>
+    </tr>
+    <tr>
+        <td>itemId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>检查项ID</td>
+    </tr>
+</table>
+
+## 删除(按商品)
+
+```
+DELETE /treatment/v1/item/delete-by-product
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>treatmentId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>处置ID</td>
+    </tr>
+    <tr>
+        <td>stockId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>库存ID</td>
     </tr>
 </table>
