--- a/门店/处置/处置信息.md
+++ b/门店/处置/处置信息.md
@@ -16,9 +16,9 @@
         <td>-</td>
     </tr>    
     <tr>
-        <td>price</td>
+        <td>totalPrice</td>
         <td>int</td>
-        <td>价格</td>
+        <td>总价</td>
         <td>-</td>
     </tr>
     <tr>
