检查和处置分开

--- a/门店/检查/检查套餐.md
+++ b/门店/检查/检查套餐.md
@@ -63,7 +63,7 @@
 ## 门店检查套餐列表
 
 ```
-GET /optometry/v1/combo
+GET /data/v1/combo
 ```
 > 请求参数
 
@@ -83,13 +83,13 @@ GET /optometry/v1/combo
 ## 查看检查套餐
 
 ```
-GET /optometry/v1/combo/:id
+GET /data/v1/optometry/combo/:id
 ```
 
 ## 所有检查项
 
 ```
-GET /optometry/v1/item
+GET /data/v1/optometry/item
 ```
 > 请求参数
 
