--- a/门店/检查/检查数据.md
+++ b/门店/检查/检查数据.md
@@ -105,7 +105,7 @@
 ## 检查列表
 
 ```
-GET /optometry/v1/data
+GET /optometry/v1/item
 ```
 > 请求参数
 
@@ -135,14 +135,14 @@ GET /optometry/v1/data
 ## 查看检查项
 
 ```
-GET /optometry/v1/data/:id
+GET /optometry/v1/item/:id
 ```
 
 
 ## 提交检查项数据
 
 ```
-POST /optometry/v1/data
+POST /optometry/v1/item/data
 ```
 
 >请求参数
