--- a/门店/处置/处置项目.md
+++ b/门店/处置/处置项目.md
@@ -25,7 +25,7 @@
         <td>type</td>
         <td>string</td>
         <td>类型</td>
-        <td>optometry(检查), product(商品)</td>
+        <td>product(商品)</td>
     </tr>   
     <tr>
         <td>combo</td>
@@ -49,63 +49,6 @@
         <td>quantity</td>
         <td>int</td>
         <td>数量</td>
-        <td>-</td>
-    </tr>
-</table>
-
-
-## 添加(按套餐)
-
-```
-POST /treatment/v1/item/combo
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>treatmentId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>处置ID</td>
-    </tr>
-    <tr>
-        <td>combo</td>
-        <td>string</td>
-        <td>套餐名</td>
-        <td>-</td>
-    </tr>
-</table>
-
-## 添加(按检查项)
-
-```
-POST /treatment/v1/item/optometryitem
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>treatmentId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>处置ID</td>
-    </tr>
-    <tr>
-        <td>itemId</td>
-        <td>string</td>
-        <td>检查项ID</td>
         <td>-</td>
     </tr>
 </table>
@@ -161,62 +104,6 @@ GET /treatment/v1/item/:id
 ```
 DELETE /treatment/v1/item/:id
 ```
-
-## 删除(按套餐)
-
-```
-DELETE /treatment/v1/item/delete-by-combo
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>treatmentId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>处置ID</td>
-    </tr>
-    <tr>
-        <td>combo</td>
-        <td>string</td>
-        <td>是</td>
-        <td>套餐</td>
-    </tr>
-</table>
-
-## 删除(按检查项)
-
-```
-DELETE /treatment/v1/item/delete-by-optometryitem
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>treatmentId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>处置ID</td>
-    </tr>
-    <tr>
-        <td>itemId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>检查项ID</td>
-    </tr>
-</table>
 
 ## 删除(按商品)
 
