添加检查单

--- a/门店/检查/检查单.md
+++ b/门店/检查/检查单.md
@@ -1,4 +1,4 @@
-# 处置信息
+# 检查单
 
 > 字段
 
@@ -16,7 +16,7 @@
         <td>-</td>
     </tr>    
     <tr>
-        <td>totalPrice</td>
+        <td>totalAmount</td>
         <td>int</td>
         <td>总价</td>
         <td>-</td>
@@ -33,7 +33,7 @@
 ## 新建
 
 ```
-POST /treatment/v1/treatment
+POST /optometry/v1/optometry
 ```
 
 >请求参数
@@ -61,17 +61,17 @@ POST /treatment/v1/treatment
 ## 列表
 
 ```
-GET /treatment/v1/treatment
+GET /optometry/v1/optometry
 ```
 
 ## 查看
 
 ```
-GET /treatment/v1/treatment/:id
+GET /optometry/v1/optometry/:id
 ```
 
 ## 删除
 
 ```
-DELETE /treatment/v1/treatment/:id
+DELETE /optometry/v1/optometry/:id
 ```
