--- a/门店/检查/检查项目.md
+++ b/门店/检查/检查项目.md
@@ -138,6 +138,62 @@ GET /optometry/v1/item
 GET /optometry/v1/item/:id
 ```
 
+## 添加(按套餐)
+
+```
+POST /optometry/v1/item/create-by-combo
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>optometryId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>检查单ID</td>
+    </tr>
+    <tr>
+        <td>combo</td>
+        <td>string</td>
+        <td>检查套餐名称</td>
+        <td>-</td>
+    </tr>
+</table>
+
+## 添加(按检查项)
+
+```
+POST /optometry/v1/item/create-by-optometryitem
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>optometryId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>检查单ID</td>
+    </tr>
+    <tr>
+        <td>itemId</td>
+        <td>string</td>
+        <td>检查项ID</td>
+        <td>-</td>
+    </tr>
+</table>
+
 
 ## 提交检查项数据
 
@@ -202,3 +258,65 @@ POST /optometry/v1/item/data
         <td>-</td>
     </tr>
 </table>
+
+## 删除(按套餐)
+
+```
+DELETE /optometry/v1/item/delete-by-combo
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>optometryId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>检查单ID</td>
+    </tr>
+    <tr>
+        <td>combo</td>
+        <td>string</td>
+        <td>检查套餐名称</td>
+        <td>-</td>
+    </tr>
+</table>
+
+## 删除(按检查项)
+
+```
+DELETE /optometry/v1/item/delete-by-optometryitem
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>optometryId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>检查单ID</td>
+    </tr>
+    <tr>
+        <td>itemId</td>
+        <td>string</td>
+        <td>检查项ID</td>
+        <td>-</td>
+    </tr>
+</table>
+
+## 删除
+
+```
+DELETE /optometry/v1/item/:id
+```
