检查项目列表

--- a/门店/检查/检查项目.md
+++ b/门店/检查/检查项目.md
@@ -116,19 +116,9 @@ GET /optometry/v1/item
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>optometryId</td>
         <td>-</td>
-        <td>门店ID</td>
-    </tr>
-    <tr>
-        <td>customerId</td>
-        <td>-</td>
-        <td>检查人ID</td>
-    </tr>
-    <tr>
-        <td>status</td>
-        <td>-</td>
-        <td>状态</td>
+        <td>检查单ID</td>
     </tr>
 </table>
 
