--- a/门店/处置/处置项目.md
+++ b/门店/处置/处置项目.md
@@ -40,6 +40,12 @@
         <td>-</td>
     </tr>
     <tr>
+        <td>spec</td>
+        <td>string</td>
+        <td>规格</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>price</td>
         <td>int</td>
         <td>价格</td>
