--- a/门店/检查/检查单.md
+++ b/门店/检查/检查单.md
@@ -70,6 +70,34 @@ GET /optometry/v1/optometry
 GET /optometry/v1/optometry/:id
 ```
 
+## 取消
+
+```
+POST /optometry/v1/optometry/cancel
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>id</td>
+        <td>string</td>
+        <td>是</td>
+        <td>ID</td>
+    </tr>
+    <tr>
+        <td>reason</td>
+        <td>string</td>
+        <td>-</td>
+        <td>取消原因</td>
+    </tr>
+</table>
+
 ## 删除
 
 ```
