--- a/门店/检查/检查项目.md
+++ b/门店/检查/检查项目.md
@@ -177,9 +177,9 @@ POST /optometry/v1/item/create-by-optometryitem
         <td>检查单ID</td>
     </tr>
     <tr>
-        <td>itemId</td>
+        <td>name</td>
         <td>string</td>
-        <td>检查项ID</td>
+        <td>检查项名称</td>
         <td>-</td>
     </tr>
 </table>
@@ -298,9 +298,9 @@ DELETE /optometry/v1/item/delete-by-optometryitem
         <td>检查单ID</td>
     </tr>
     <tr>
-        <td>itemId</td>
+        <td>name</td>
         <td>string</td>
-        <td>检查项ID</td>
+        <td>检查项名称</td>
         <td>-</td>
     </tr>
 </table>
