--- a/门店/账单/账单信息.md
+++ b/门店/账单/账单信息.md
@@ -40,9 +40,9 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>amountToPay</td>
+        <td>amountReceivable</td>
         <td>int</td>
-        <td>待支付金额</td>
+        <td>应收金额</td>
         <td>-</td>
     </tr>
     <tr>
@@ -194,6 +194,46 @@ POST /bill/v1/bill/create-by-treatment
         <td>int</td>
         <td>是</td>
         <td>折扣</td>
+    </tr>
+</table>
+
+>payList支付列表
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>billId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>账单ID</td>
+    </tr>
+    <tr>
+        <td>amountReceivable</td>
+        <td>int</td>
+        <td>应收金额</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>amountPaid</td>
+        <td>int</td>
+        <td>已支付金额</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>amountRefund</td>
+        <td>int</td>
+        <td>已退款金额</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>备注</td>
+        <td>-</td>
     </tr>
 </table>
 
