--- a/门店/账单/支付信息.md
+++ b/门店/账单/支付信息.md
@@ -1,4 +1,4 @@
-# 支付
+# 支付信息
 
 > 更新记录
 
@@ -17,105 +17,59 @@
 
 <table>
     <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:200px;">说明</th>
+        <th style="width:150px;">属性名称</th>
+        <th style="width:150px;">类型</th>
+        <th>说明</th>
         <th>备注</th>
     </tr>
     <tr>
-        <td>type</td>
-        <td>BillType</td>
-        <td>账单类型</td>
-        <td>
-            Deposit("预付款"),
-            Balance("尾款"),
-            FullPay("全款"),
-        </td>
-    </tr>
-    <tr>
-        <td>user</td>
-        <td>IdName</td>
-        <td>创建人</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>customerId</td>
+        <td>shopId</td>
         <td>string</td>
-        <td>客户ID</td>
+        <td>门店ID</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>method</td>
-        <td>PaymentMethod</td>
-        <td>支付方式</td>
-        <td>如下表</td>
+        <td>billId</td>
+        <td>string</td>
+        <td>账单ID</td>
+        <td>-</td>
     </tr>
     <tr>
-        <td>amountToPay</td>
+        <td>amountReceivable</td>
         <td>int</td>
-        <td>待支付金额</td>
+        <td>应收金额</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>amount</td>
+        <td>amountPaid</td>
         <td>int</td>
-        <td>待支付金额</td>
+        <td>已支付金额</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>amountDiscount</td>
+        <td>amountRefund</td>
         <td>int</td>
         <td>已退款金额</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>备注</td>
         <td>-</td>
     </tr>
     <tr>
         <td>status</td>
         <td>Status</td>
         <td>状态</td>
-        <td>
-            Ok("已完成"),
-            Cancel("已取消")
-        </td>
+        <td>ok("完成"), waiting("待支付"), cancel("已取消"), reverse("冲账"), bereverse("被冲账")</td>
     </tr>
 </table>
 
-> PaymentMethod(支付方式)
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:200px;">说明</th>
-        <th>备注</th>
-    </tr>
-    <tr>
-        <td>type</td>
-        <td>PaymentMethodType</td>
-        <td>支付渠道类型</td>
-        <td>   
-            Cash("现金"),
-            BankCard("银行卡"),
-            Alipay("支付宝"),
-            Wepay("微信支付")
-        </td>
-    </tr>
-    <tr>
-        <td>account</td>
-        <td>String</td>
-        <td>账号</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>name</td>
-        <td>String</td>
-        <td>名称</td>
-        <td>-</td>
-    </tr>    
-</table>
-
-## 账单列表
+## 支付
 
 ```
-GET /bill/v1/bill
+POST /bill/v1/bill/pay
 ```
 
 > 请求参数
@@ -128,31 +82,26 @@ GET /bill/v1/bill
         <th>备注</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>billId</td>
         <td>String</td>
-        <td>门店ID</td>
+        <td>账单ID</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>orderId</td>
+        <td>payments</td>
+        <td>PaymentMoney[]</td>
+        <td>支付方式金额, 见下表</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>remark</td>
         <td>String</td>
-        <td>订单ID</td>
-        <td>不传获取全部账单</td>
+        <td>备注</td>
+        <td>-</td>
     </tr>
 </table>
 
-## 查看支付账单
-
-```
-GET /bill/v1/bill/:id
-```
-
-## 创建支付账单
-
-```
-POST /bill/v1/bill
-```
-> 请求参数
+>PaymentMoney支付方式金额
 
 <table>
     <tr>
@@ -162,31 +111,43 @@ POST /bill/v1/bill
         <th>备注</th>
     </tr>
     <tr>
-        <td>type</td>
-        <td>BillType</td>
-        <td>账单类型</td>
-        <td>
-            Deposit("预付款"),
-            Balance("尾款"),
-            FullPay("全款"),
-        </td>
-    </tr>
-    <tr>
-        <td>orderId</td>
-        <td>string</td>
-        <td>订单ID</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>method</td>
-        <td>PaymentMethod</td>
+        <td>payMethod</td>
+        <td>String</td>
         <td>支付方式</td>
-        <td>如上表</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>amount</td>
         <td>int</td>
         <td>支付金额</td>
+        <td>-</td>
+    </tr>
+</table>
+
+## 支付方式列表
+
+```
+见门店设置接口
+```
+
+## 作废支付
+
+```
+POST /bill/v1/bill/pay/cancel
+```
+> 请求参数
+
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:200px;">说明</th>
+        <th>备注</th>
+    </tr>
+    <tr>
+        <td>billPayId</td>
+        <td>string</td>
+        <td>支付单ID</td>
         <td>-</td>
     </tr>
     <tr>
