--- a/门店/门店/门店设置.md
+++ b/门店/门店/门店设置.md
@@ -41,20 +41,9 @@ GET /shop/v1/setting/:shopId?path=:item
         <th>备注</th>
     </tr>
     <tr>
-        <td>roundPriceLimit</td>
-        <td>int</td>
-        <td>允许抹零的金额</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>methodList</td>
+        <td>methods</td>
         <td>list</td>
         <td>支付方式列表</td>
-        <td>见支付接口, 如: [{
-                "type": "Alipay",
-                "account": "账号: 131223881@qq.com",
-                "name": "名称: 老板的支付宝"
-            }]
-        </td>
+        <td>-</td>
     </tr>
 </table>
