--- a/门店/预付款/预付款.md
+++ b/门店/预付款/预付款.md
@@ -58,6 +58,12 @@
         <td>-</td>
     </tr>
     <tr>
+        <td>payMethod</td>
+        <td>String</td>
+        <td>支付方式</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>amount</td>
         <td>int</td>
         <td>金额</td>
@@ -136,6 +142,12 @@ POST /balance/v1/balance
         <td>string</td>
         <td>-</td>
         <td>转移到的顾客ID</td>
+    </tr>
+    <tr>
+        <td>payMethod</td>
+        <td>String</td>
+        <td>-</td>
+        <td>支付方式</td>
     </tr>
     <tr>
         <td>amount</td>
