--- a/门店/预付款/预付款.md
+++ b/门店/预付款/预付款.md
@@ -10,7 +10,7 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>type</td>
+        <td>balanceType</td>
         <td>string</td>
         <td>类型</td>
         <td>recharge("充值") refund("退款") transfer("转移")</td>
@@ -120,7 +120,7 @@ POST /balance/v1/balance
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>type</td>
+        <td>balanceType</td>
         <td>string</td>
         <td>是</td>
         <td>recharge("充值") refund("退款") transfer("转移")</td>
