检查处置更新

--- a/门店/检查/检查项目.md
+++ b/门店/检查/检查项目.md
@@ -95,12 +95,59 @@
         <td>-</td>
     </tr>
     <tr>
+        <td>payStatus</td>
+        <td>Status</td>
+        <td>状态</td>
+        <td>waiting("待付款"), ok("已付款")</td>
+    </tr>
+    <tr>
         <td>status</td>
         <td>Status</td>
         <td>状态</td>
-        <td>见全局/系统参数</td>
+        <td>waiting("开单中"), doing("检查中"), ok("完成")</td>
     </tr>
 </table>
+
+## 等检查列表(包含今日已完成列表)
+
+```
+GET /optometry/v1/item/check
+```
+> 请求参数
+
+<table>
+    <tr>
+        <th style="width:150px;">属性名称</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>customerId</td>
+        <td>是</td>
+        <td>顾客ID</td>
+    </tr>
+</table>
+
+>返回值
+
+<table>
+    <tr>
+        <th style="width:150px;">属性名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>waitingList</td>
+        <td>array</td>
+        <td>待检查列表</td>
+    </tr>
+    <tr>
+        <td>todayList</td>
+        <td>array</td>
+        <td>今日已完成</td>
+    </tr>
+</table>
+
 
 ## 检查项列表
 
@@ -117,7 +164,7 @@ GET /optometry/v1/item
     </tr>
     <tr>
         <td>optometryId</td>
-        <td>-</td>
+        <td>是</td>
         <td>检查单ID</td>
     </tr>
 </table>
