--- a/门店/检查/检查单.md
+++ b/门店/检查/检查单.md
@@ -22,10 +22,16 @@
         <td>-</td>
     </tr>
     <tr>
+        <td>payStatus</td>
+        <td>Status</td>
+        <td>状态</td>
+        <td>waiting("待付款"), ok("已付款")</td>
+    </tr>
+    <tr>
         <td>status</td>
         <td>Status</td>
         <td>状态</td>
-        <td>ok("完成"), doing("开单中"), waiting("待付款")</td>
+        <td>waiting("开单中"), doing("检查中"), ok("完成")</td>
     </tr>
 </table>
 
@@ -91,10 +97,10 @@ POST /optometry/v1/optometry/cancel
         <td>ID</td>
     </tr>
     <tr>
-        <td>reason</td>
+        <td>remark</td>
         <td>string</td>
         <td>-</td>
-        <td>取消原因</td>
+        <td>备注,取消原因</td>
     </tr>
 </table>
 
