--- a/门店/加工/加工单.md
+++ b/门店/加工/加工单.md
@@ -69,34 +69,22 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>frameOdId</td>
+        <td>frameId</td>
         <td>string</td>
-        <td>右眼镜架ID</td>
-        <td>处置ID</td>
-    </tr>
-    <tr>
-        <td>frameOd</td>
-        <td>string</td>
-        <td>右眼镜架名称</td>
+        <td>镜架ID</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>frameOsId</td>
+        <td>frame</td>
         <td>string</td>
-        <td>左眼镜架ID</td>
-        <td>处置ID</td>
-    </tr>
-    <tr>
-        <td>frameOs</td>
-        <td>string</td>
-        <td>左眼镜架名称</td>
+        <td>镜架</td>
         <td>-</td>
     </tr>
     <tr>
         <td>lensOdId</td>
         <td>string</td>
         <td>右眼镜片ID</td>
-        <td>处置ID</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>lensOd</td>
@@ -108,7 +96,7 @@
         <td>lensOsId</td>
         <td>string</td>
         <td>左眼镜片ID</td>
-        <td>处置ID</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>lensOs</td>
@@ -193,34 +181,22 @@ POST /processing/v1/processing
         <td>-</td>
     </tr>
     <tr>
-        <td>frameOdId</td>
+        <td>frameId</td>
         <td>string</td>
-        <td>右眼镜架ID</td>
-        <td>处置ID</td>
-    </tr>
-    <tr>
-        <td>frameOd</td>
-        <td>string</td>
-        <td>右眼镜架名称</td>
+        <td>镜架ID</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>frameOsId</td>
+        <td>frame</td>
         <td>string</td>
-        <td>左眼镜架ID</td>
-        <td>处置ID</td>
-    </tr>
-    <tr>
-        <td>frameOs</td>
-        <td>string</td>
-        <td>左眼镜架名称</td>
+        <td>镜架</td>
         <td>-</td>
     </tr>
     <tr>
         <td>lensOdId</td>
         <td>string</td>
         <td>右眼镜片ID</td>
-        <td>处置ID</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>lensOd</td>
@@ -232,7 +208,7 @@ POST /processing/v1/processing
         <td>lensOsId</td>
         <td>string</td>
         <td>左眼镜片ID</td>
-        <td>处置ID</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>lensOs</td>
