--- a/门店/加工/加工单.md
+++ b/门店/加工/加工单.md
@@ -169,15 +169,15 @@ POST /processing/v1/processing
         <td>加工方式</td>
     </tr>
     <tr>
-        <td>processingShopId</td>
+        <td>processingPlaceId</td>
         <td>String</td>
-        <td>加工门店ID</td>
+        <td>加工场所ID</td>
         <td>-</td>
     </tr>
     <tr>
         <td>processingPlace</td>
         <td>String</td>
-        <td>加工门店名</td>
+        <td>加工场所名</td>
         <td>-</td>
     </tr>
     <tr>
