加工单修复

--- a/门店/加工/加工单.md
+++ b/门店/加工/加工单.md
@@ -105,9 +105,9 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>completedAt</td>
+        <td>readyAt</td>
         <td>datetime</td>
-        <td>完成时间</td>
+        <td>加工完成时间</td>
         <td>-</td>
     </tr>
     <tr>
@@ -238,7 +238,7 @@ GET /processing/v1/processing/:id
 ## 加工完成
 
 ```
-POST /processing/v1/processing/complete
+POST /processing/v1/processing/ready
 ```
 
 > 请求参数
