--- a/门店/商品/基础信息.md
+++ b/门店/商品/基础信息.md
@@ -16,43 +16,15 @@
         <td>10("普通"),20("GSP")</td>
     </tr>
     <tr>
-        <td>attribute</td>
-        <td>ProductAttribute</td>
-        <td>商品属性</td>
-        <td>
-            Frame("镜架"),
-            Lens("镜片"),
-            ReadingGlass("老花镜"),
-            ContactLens("隐形眼镜"),
-            ContactLensesCares("隐形护理"),
-            OkGlass("OK镜"),
-            Physiotherapy("理疗"),
-            Training("视力训练"),
-            Other("其它"),
-        </td>
-    </tr>
-    <tr>
-        <td>processing</td>
-        <td>bool</td>
-        <td>是否加工</td>
-        <td>-</td>
-    </tr>
-    <tr>
         <td>code</td>
         <td>string</td>
         <td>编号</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>category1</td>
+        <td>category</td>
         <td>string</td>
-        <td>分类1</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>category2</td>
-        <td>string</td>
-        <td>分类2</td>
+        <td>分类</td>
         <td>-</td>
     </tr>
     <tr>
@@ -283,34 +255,6 @@ POST /product/v1/product
             Normal("普通"),
             GSP("GSP"),
         </td>
-    </tr>
-    <tr>
-        <td>attribute</td>
-        <td>ProductAttribute</td>
-        <td>商品属性</td>
-        <td>
-            Frame("镜架"),
-            Lens("镜片"),
-            ReadingGlass("老花镜"),
-            ContactLens("隐形眼镜"),
-            ContactLensesCares("隐形护理"),
-            OkGlass("OK镜"),
-            Physiotherapy("理疗"),
-            Training("视力训练"),
-            Other("其它"),
-        </td>
-    </tr>
-    <tr>
-        <td>processing</td>
-        <td>bool</td>
-        <td>是否加工</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>customize</td>
-        <td>bool</td>
-        <td>是否定制</td>
-        <td>-</td>
     </tr>
     <tr>
         <td>category</td>
