--- a/门店/商品/库存单据.md
+++ b/门店/商品/库存单据.md
@@ -10,16 +10,16 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>type</td>
-        <td>StockReceiptType</td>
+        <td>receiptType</td>
+        <td>object</td>
         <td>单据类型</td>
-        <td>StockReceiptIn("入库单"),StockReceiptOut("出库单"),Stocktaking("盘点单")</td>
+        <td>in("入库单"),out("出库单"),check("盘点单")</td>
     </tr>
     <tr>
-        <td>category</td>
-        <td>StockReceiptCategory</td>
-        <td>库存单据分类</td>
-        <td>PurchaseIn("采购入库"),TransferIn("调拨入库"),TransferOut("调拨出库"),DamageOut("损溢出库"),ReturnOut("退货出库"),Stocktaking("盘点")</td>
+        <td>receiptCategory</td>
+        <td>object</td>
+        <td>单据分类</td>
+        <td>purchaseIn("采购入库"),transferIn("调拨入库"),transferOut("调拨出库"),damageOut("损溢出库"),returnOut("退货出库"),check("盘点")</td>
     </tr>
     <tr>
         <td>title</td>
@@ -28,9 +28,9 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>user</td>
-        <td>IdName</td>
-        <td>员工</td>
+        <td>userId</td>
+        <td>string</td>
+        <td>员工ID</td>
         <td>-</td>
     </tr>
     <tr>
@@ -76,10 +76,10 @@
         <td>默认填写当前日期, 格式: 2021-01-02</td>
     </tr>
     <tr>
-        <td>operationInfo</td>
-        <td>Operation</td>
-        <td>操作相关信息</td>
-        <td>operator: 操作员 dateTime: 日期时间 reason: 操作原因 remark: 备注</td>
+        <td>auditInfo</td>
+        <td>object</td>
+        <td>审核信息</td>
+        <td>userId: 审核人ID date: 日期时间 result: approval(批准) reject(拒绝) reason: 操作原因 remark: 备注</td>
     </tr>
     <tr>
         <td>productCount</td>
@@ -97,14 +97,14 @@
         <td>status</td>
         <td>Status</td>
         <td>状态</td>
-        <td>Doing(进行中), WaitingAudit(待审核), Ok(正常)</td>
+        <td>doing(进行中), auditing(待审核), ok(正常), reject(审核拒绝), cancel(取消)</td>
     </tr>
 </table>
 
 ## 库存单据列表
 
 ```
-GET /product/v1/receipt
+GET /receipt/v1/receipt
 ```
 
 >请求参数
@@ -131,7 +131,7 @@ GET /product/v1/receipt
         <td>status</td>
         <td>string</td>
         <td>-</td>
-        <td>Doing(进行中), WaitingAudit(待审核), Ok(正常), Cancel(取消)</td>
+        <td>doing(进行中), auditing(待审核), ok(正常), reject(审核拒绝), cancel(取消)</td>
     </tr>
     <tr>
         <td>其它过滤字段</td>
@@ -144,7 +144,7 @@ GET /product/v1/receipt
 ## 添加单据
 
 ```
-POST /product/v1/receipt
+POST /receipt/v1/receipt
 ```
 
 >请求参数
@@ -153,7 +153,7 @@ POST /product/v1/receipt
 ## 更新单据
 
 ```
-PATCH /product/v1/receipt/:id
+PATCH /receipt/v1/receipt/:id
 ```
 
 >请求参数
@@ -175,7 +175,29 @@ PATCH /product/v1/receipt/:id
 ## 取消单据
 
 ```
-POST /product/v1/receipt/cancel
+POST /receipt/v1/receipt/cancel
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>id</td>
+        <td>string</td>
+        <td>ID</td>
+        <td>-</td>
+    </tr>
+</table>
+
+## 删除单据
+
+```
+DELETE /receipt/v1/receipt/:id
 ```
 
 >请求参数
@@ -197,7 +219,7 @@ POST /product/v1/receipt/cancel
 ## 提交审核单据
 
 ```
-POST /product/v1/receipt/submitAudit
+POST /receipt/v1/receipt/submit-audit
 ```
 
 > 仅表单方式需要提交审核, excel方式自动提交审核
@@ -221,7 +243,7 @@ POST /product/v1/receipt/submitAudit
 ## 审核单据
 
 ```
-POST /product/v1/receipt/audit
+POST /receipt/v1/receipt/audit
 ```
 
 >请求参数
@@ -242,7 +264,19 @@ POST /product/v1/receipt/audit
         <td>result</td>
         <td>AuditResult</td>
         <td>是</td>
-        <td>Approval("批准"),Reject("拒绝")</td>
+        <td>approval("批准"),reject("拒绝")</td>
+    </tr>
+    <tr>
+        <td>reason</td>
+        <td>string</td>
+        <td>-</td>
+        <td>原因</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>-</td>
+        <td>备注</td>
     </tr>
 </table>
 
