--- a/门店/商品/库存记录.md
+++ b/门店/商品/库存记录.md
@@ -16,39 +16,16 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>type</td>
-        <td>StockLogType</td>
+        <td>receiptType</td>
+        <td>string</td>
         <td>库存记录类型</td>
-        <td>StockIn("入库"),StockOut("出库"),StocktakingEqual("盘点平盘")</td>
+        <td>同库存记录</td>
     </tr>
     <tr>
-        <td>logCategory</td>
-        <td>StockLogCategory</td>
+        <td>receiptCategory</td>
+        <td>string</td>
         <td>库存记录分类</td>
-        <td>
-            PurchaseIn("采购入库"),
-            TransferIn("调拨入库"),
-            ReturnIn("退货入库"),
-            StocktakingIn("盘点入库"),        
-            SellOut("销售出库"),
-            TransferOut("调拨出库"),
-            ReturnOut("退货出库"),
-            DamageOut("损溢出库"),
-            StocktakingOut("盘点出库"),
-            StocktakingEqual("盘点平盘")
-        </td>
-    </tr>
-    <tr>
-        <td>productType</td>
-        <td>ProductType</td>
-        <td>商品类型</td>
-        <td>Normal("普通"),GSP("GSP")</td>
-    </tr>
-    <tr>
-        <td>user</td>
-        <td>IdName</td>
-        <td>员工</td>
-        <td>-</td>
+        <td>同库存记录</td>
     </tr>
     <tr>
         <td>warehouse</td>
@@ -62,6 +39,12 @@
         <td>商品ID</td>
         <td>-</td>
     </tr>    
+    <tr>
+        <td>productType</td>
+        <td>ProductType</td>
+        <td>商品类型</td>
+        <td>Normal("普通"),GSP("GSP")</td>
+    </tr>
     <tr>
         <td>remark</td>
         <td>string</td>
@@ -103,7 +86,7 @@
 ## 库存记录列表
 
 ```
-GET /product/v1/stock-log
+GET /receipt/v1/stock-log
 ```
 
 >请求参数
@@ -131,7 +114,7 @@ GET /product/v1/stock-log
 ## 添加库存记录(表单方式)
 
 ```
-POST /product/v1/stock-log
+POST /receipt/v1/stock-log
 ```
 
 > 此方式可多次向单据中添加库存记录, 提交相同商品将覆盖现有数据
@@ -189,7 +172,7 @@ POST /product/v1/stock-log
 ## 更新库存记录
 
 ```
-PATCH /product/v1/stock-log/:id
+PATCH /receipt/v1/stock-log/:id
 ```
 
 >请求参数
@@ -217,5 +200,5 @@ PATCH /product/v1/stock-log/:id
 ## 删除库存记录
 
 ```
-DELETE /product/v1/stock-log/:id
+DELETE /receipt/v1/stock-log/:id
 ```
