--- a/门店/商品/库存查询.md
+++ b/门店/商品/库存查询.md
@@ -21,16 +21,10 @@ GET /stock/v1/stock
         <td>门店ID</td>
     </tr>
     <tr>
-        <td>category1</td>
+        <td>category</td>
         <td>string</td>
         <td>-</td>
         <td>分类1</td>
-    </tr>
-    <tr>
-        <td>category2</td>
-        <td>string</td>
-        <td>-</td>
-        <td>分类2</td>
     </tr>
     <tr>
         <td>warehouse</td>
