--- a/门店/商品/库存记录.md
+++ b/门店/商品/库存记录.md
@@ -86,7 +86,7 @@
 ## 库存记录列表
 
 ```
-GET /receipt/v1/stock-log
+GET /product/v1/stock-log
 ```
 
 >请求参数
@@ -114,7 +114,7 @@ GET /receipt/v1/stock-log
 ## 添加库存记录(表单方式)
 
 ```
-POST /receipt/v1/stock-log
+POST /product/v1/stock-log
 ```
 
 > 此方式可多次向单据中添加库存记录, 提交相同商品将覆盖现有数据
@@ -172,7 +172,7 @@ POST /receipt/v1/stock-log
 ## 更新库存记录
 
 ```
-PATCH /receipt/v1/stock-log/:id
+PATCH /product/v1/stock-log/:id
 ```
 
 >请求参数
@@ -200,5 +200,5 @@ PATCH /receipt/v1/stock-log/:id
 ## 删除库存记录
 
 ```
-DELETE /receipt/v1/stock-log/:id
+DELETE /product/v1/stock-log/:id
 ```
