--- a/门店/商品/库存单据.md
+++ b/门店/商品/库存单据.md
@@ -104,7 +104,7 @@
 ## 库存单据列表
 
 ```
-GET /receipt/v1/receipt
+GET /product/v1/receipt
 ```
 
 >请求参数
@@ -144,7 +144,7 @@ GET /receipt/v1/receipt
 ## 添加单据
 
 ```
-POST /receipt/v1/receipt
+POST /product/v1/receipt
 ```
 
 >请求参数
@@ -153,7 +153,7 @@ POST /receipt/v1/receipt
 ## 更新单据
 
 ```
-PATCH /receipt/v1/receipt/:id
+PATCH /product/v1/receipt/:id
 ```
 
 >请求参数
@@ -175,7 +175,7 @@ PATCH /receipt/v1/receipt/:id
 ## 取消单据
 
 ```
-POST /receipt/v1/receipt/cancel
+POST /product/v1/receipt/cancel
 ```
 
 >请求参数
@@ -197,7 +197,7 @@ POST /receipt/v1/receipt/cancel
 ## 删除单据
 
 ```
-DELETE /receipt/v1/receipt/:id
+DELETE /product/v1/receipt/:id
 ```
 
 >请求参数
@@ -219,7 +219,7 @@ DELETE /receipt/v1/receipt/:id
 ## 提交审核单据
 
 ```
-POST /receipt/v1/receipt/submit-audit
+POST /product/v1/receipt/submit-audit
 ```
 
 > 仅表单方式需要提交审核, excel方式自动提交审核
@@ -243,7 +243,7 @@ POST /receipt/v1/receipt/submit-audit
 ## 审核单据
 
 ```
-POST /receipt/v1/receipt/audit
+POST /product/v1/receipt/audit
 ```
 
 >请求参数
