修正系统参数

--- a/全局/系统参数.md
+++ b/全局/系统参数.md
@@ -395,22 +395,22 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>Web</td>
+        <td>web</td>
         <td>网页</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>WechatMiniProgram</td>
+        <td>mp</td>
         <td>微信小程序</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>AndroidPad</td>
+        <td>apad</td>
         <td>安卓平板</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>IPad</td>
+        <td>ipad</td>
         <td>iPad</td>
         <td>-</td>
     </tr>
