--- a/门店/商品/库存记录.md
+++ b/门店/商品/库存记录.md
@@ -38,12 +38,6 @@
         <td>string</td>
         <td>商品ID</td>
         <td>-</td>
-    </tr>    
-    <tr>
-        <td>productType</td>
-        <td>ProductType</td>
-        <td>商品类型</td>
-        <td>Normal("普通"),GSP("GSP")</td>
     </tr>
     <tr>
         <td>remark</td>
@@ -55,6 +49,24 @@
         <td>stockCount</td>
         <td>int</td>
         <td>原库存</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>batchNo</td>
+        <td>string</td>
+        <td>批号</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>productionDate</td>
+        <td>date</td>
+        <td>生产日期</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>expirationDate</td>
+        <td>date</td>
+        <td>过期日期</td>
         <td>-</td>
     </tr>
     <tr>
@@ -111,10 +123,10 @@ GET /product/v1/stock-log
     </tr>
 </table>
 
-## 添加库存记录(表单方式)
+## 添加入库库存记录
 
 ```
-POST /product/v1/stock-log
+POST /product/v1/stock-log/instock
 ```
 
 > 此方式可多次向单据中添加库存记录, 提交相同商品将覆盖现有数据
@@ -166,6 +178,24 @@ POST /product/v1/stock-log
         <td>int</td>
         <td>是</td>
         <td>数量</td>
+    </tr>
+    <tr>
+        <td>batchNo</td>
+        <td>string</td>
+        <td>批号</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>productionDate</td>
+        <td>date</td>
+        <td>-</td>
+        <td>生产日期</td>
+    </tr>
+    <tr>
+        <td>expirationDate</td>
+        <td>date</td>
+        <td>-</td>
+        <td>过期日期</td>
     </tr>
 </table>
 
