--- a/门店/商品/库存记录.md
+++ b/门店/商品/库存记录.md
@@ -225,6 +225,24 @@ PATCH /product/v1/stock-log/:id
         <td>是</td>
         <td>数量, 不小于1</td>
     </tr>
+        <tr>
+        <td>batchNo</td>
+        <td>string</td>
+        <td>批号</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>productionDate</td>
+        <td>date</td>
+        <td>-</td>
+        <td>生产日期</td>
+    </tr>
+    <tr>
+        <td>expirationDate</td>
+        <td>date</td>
+        <td>-</td>
+        <td>过期日期</td>
+    </tr>
 </table>
 
 ## 删除库存记录
