商品,库存导出

--- a/门店/商品/商品信息.md
+++ b/门店/商品/商品信息.md
@@ -131,52 +131,6 @@
     </tr>
 </table>
 
-> GSP规范
-<table>
-    <tr>
-        <th style="width:150px;">属性名称</th>
-        <th style="width:150px;">类型</th>
-        <th>说明</th>
-        <th>备注</th>
-    </tr>
-    <tr>
-        <td>registrationNumber</td>
-        <td>string</td>
-        <td>注册证号</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>manufacturer</td>
-        <td>string</td>
-        <td>生产企业</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>productionBatchNo</td>
-        <td>string</td>
-        <td>生产批号</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>productionDate</td>
-        <td>date</td>
-        <td>生产日期</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>expirationDate</td>
-        <td>date</td>
-        <td>过期日期</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>shelfLife</td>
-        <td>string</td>
-        <td>保质期</td>
-        <td>-</td>
-    </tr>
-</table>
-
 ## 添加(excel方式)
 
 ```
@@ -291,3 +245,72 @@ PATCH /product/v1/product/:id
 ```
 DELETE /product/v1/product/:id
 ```
+
+## 商品列表
+
+```
+GET /product/v1/product
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>shopId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>门店ID</td>
+    </tr>
+    <tr>
+        <td>category</td>
+        <td>string</td>
+        <td>-</td>
+        <td>分类</td>
+    </tr>
+    <tr>
+        <td>keyword</td>
+        <td>string</td>
+        <td>-</td>
+        <td>关键词</td>
+    </tr>
+</table>
+
+
+## 商品导出
+
+```
+GET /product/v1/product/export
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>shopId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>门店ID</td>
+    </tr>
+    <tr>
+        <td>category</td>
+        <td>string</td>
+        <td>是</td>
+        <td>分类</td>
+    </tr>
+    <tr>
+        <td>keyword</td>
+        <td>string</td>
+        <td>-</td>
+        <td>关键词</td>
+    </tr>
+</table>
