--- a/门店/商品/库存查询.md
+++ b/门店/商品/库存查询.md
@@ -45,3 +45,49 @@ GET /product/v1/stock
         <td>搜索</td>
     </tr>
 </table>
+
+## 库存导出
+
+```
+GET /product/v1/stock/export
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>shopId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>门店ID</td>
+    </tr>
+    <tr>
+        <td>category</td>
+        <td>string</td>
+        <td>是</td>
+        <td>分类</td>
+    </tr>
+    <tr>
+        <td>warehouse</td>
+        <td>string</td>
+        <td>-</td>
+        <td>只查指定仓库</td>
+    </tr>
+    <tr>
+        <td>instock</td>
+        <td>int</td>
+        <td>-</td>
+        <td>只看有货, 用法 instock=1</td>
+    </tr>
+    <tr>
+        <td>keyword</td>
+        <td>string</td>
+        <td>-</td>
+        <td>搜索</td>
+    </tr>
+</table>
