--- a/门店/商品/商品信息.md
+++ b/门店/商品/商品信息.md
@@ -131,6 +131,75 @@
     </tr>
 </table>
 
+## 商品目录列表
+
+```
+GET /product/v1/product
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>shopId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>门店ID</td>
+    </tr>
+    <tr>
+        <td>category</td>
+        <td>string</td>
+        <td>-</td>
+        <td>分类</td>
+    </tr>
+    <tr>
+        <td>keyword</td>
+        <td>string</td>
+        <td>-</td>
+        <td>关键词</td>
+    </tr>
+</table>
+
+
+## 商品目录导出
+
+```
+GET /product/v1/product/export
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>shopId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>门店ID</td>
+    </tr>
+    <tr>
+        <td>category</td>
+        <td>string</td>
+        <td>是</td>
+        <td>分类</td>
+    </tr>
+    <tr>
+        <td>keyword</td>
+        <td>string</td>
+        <td>-</td>
+        <td>关键词</td>
+    </tr>
+</table>
+
 ## 添加(excel方式)
 
 ```
@@ -245,72 +314,3 @@ PATCH /product/v1/product/:id
 ```
 DELETE /product/v1/product/:id
 ```
-
-## 商品列表
-
-```
-GET /product/v1/product
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>shopId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>门店ID</td>
-    </tr>
-    <tr>
-        <td>category</td>
-        <td>string</td>
-        <td>-</td>
-        <td>分类</td>
-    </tr>
-    <tr>
-        <td>keyword</td>
-        <td>string</td>
-        <td>-</td>
-        <td>关键词</td>
-    </tr>
-</table>
-
-
-## 商品导出
-
-```
-GET /product/v1/product/export
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>shopId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>门店ID</td>
-    </tr>
-    <tr>
-        <td>category</td>
-        <td>string</td>
-        <td>是</td>
-        <td>分类</td>
-    </tr>
-    <tr>
-        <td>keyword</td>
-        <td>string</td>
-        <td>-</td>
-        <td>关键词</td>
-    </tr>
-</table>
