--- a/门店/商品/商品信息.md
+++ b/门店/商品/商品信息.md
@@ -94,6 +94,18 @@
         <td>-</td>
     </tr>
     <tr>
+        <td>manufacturer</td>
+        <td>string</td>
+        <td>生产厂商</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>registrationNumber</td>
+        <td>string</td>
+        <td>注册证号</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>timeToMarket</td>
         <td>string</td>
         <td>上市时间</td>
