--- a/门店/商品/库存记录.md
+++ b/门店/商品/库存记录.md
@@ -87,12 +87,6 @@
         <td>数量结果, 正负值</td>
         <td>-</td>
     </tr>
-    <tr>
-        <td>product</td>
-        <td>Product</td>
-        <td>原始商品</td>
-        <td>-</td>
-    </tr>
 </table>
 
 ## 库存记录列表
@@ -124,6 +118,8 @@ GET /product/v1/stock-log
 </table>
 
 ## 添加入库库存记录
+
+>添加记录到库存单据, 仅入库使用此添加方式
 
 ```
 POST /product/v1/stock-log/instock
@@ -198,6 +194,62 @@ POST /product/v1/stock-log/instock
         <td>过期日期</td>
     </tr>
 </table>
+
+
+## 添加库存记录
+
+>添加记录到库存单据, 除入库外其它添加方式
+
+```
+POST /product/v1/stock-log
+```
+
+> 此方式可多次向单据中添加库存记录, 提交相同商品将覆盖现有数据
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>receiptId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>单据ID</td>
+    </tr>
+    <tr>
+        <td>data</td>
+        <td>List</td>
+        <td>是</td>
+        <td>商品日志Payload列表, 见下表</td>
+    </tr>
+</table>
+
+>商品日志Payload
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>stockId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>库存编号</td>
+    </tr>
+    <tr>
+        <td>count</td>
+        <td>int</td>
+        <td>是</td>
+        <td>数量</td>
+    </tr>
+</table>
+
 
 ## 更新库存记录
 
