--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -128,3 +128,36 @@
 
 > 响应内容: 对象或者数组 <a href="http://tool.oschina.net/codeformat/json" target="_blank">附在线json格式化工具</a>
 
+## 上传文件
+
+`
+POST {{host}}/api/commservice/file/v1/upload
+`
+> 请求参数:
+
+<table>
+    <tr>
+        <th style="width:150px;">请求参数</th>
+        <th>必须</th>
+        <th>类型</th>
+        <th>说明</th>
+    </tr>
+    <tr>
+        <td>upfile</td>
+        <td>是</td>
+        <td>string</td>
+        <td>上传的文件</td>
+    </tr>
+    <tr>
+        <td>prefix</td>
+        <td>是</td>
+        <td>string</td>
+        <td>当前appId, 登录时有返回</td>
+    </tr>
+</table>
+
+## 获取上传文件
+
+`
+GET {{host}}/api/commservice/file/v1/get?key=:key
+`
