--- a/门店/问卷/问卷.md
+++ b/门店/问卷/问卷.md
@@ -1,4 +1,4 @@
-# 调查表数据
+# 问卷
 
 > 更新记录
 
@@ -25,25 +25,7 @@
     <tr>
         <td>type</td>
         <td>String</td>
-        <td>调查表类型</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>user</td>
-        <td>User</td>
-        <td>创建员工信息</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>familyId</td>
-        <td>String</td>
-        <td>家庭ID</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>family</td>
-        <td>Customer</td>
-        <td>主账号</td>
+        <td>问卷类型</td>
         <td>-</td>
     </tr>
     <tr>
@@ -53,20 +35,20 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>customer</td>
-        <td>Customer</td>
-        <td>顾客</td>
+        <td>customerName</td>
+        <td>string</td>
+        <td>顾客名</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>itemList</td>
-        <td>List<SurveyItem></td>
-        <td>问卷项列表</td>
+        <td>content</td>
+        <td>json<SurveyItem></td>
+        <td>问卷内容</td>
         <td>见下表</td>
     </tr>
 </table>
 
-> 问卷项列表(SurveyItem)
+> 问卷内容
 
 <table>
     <tr>
@@ -76,15 +58,15 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>id</td>
+        <td>itemId</td>
         <td>String</td>
-        <td>项目ID</td>
+        <td>题目ID</td>
         <td>题目唯一ID</td>
     </tr>
     <tr>
         <td>number</td>
         <td>String</td>
-        <td>项目编号</td>
+        <td>题目编号</td>
         <td>如: 1.</td>
     </tr>
     <tr>
@@ -103,14 +85,14 @@
         <td>answer</td>
         <td>List<Object></td>
         <td>答案</td>
-        <td>-</td>
+        <td>以数组方式保存</td>
     </tr>
 </table>
 
-## 调查表列表
+## 顾客问卷
 
 ```
-GET /survey/v1/survey
+GET /survey/v1/survey/view
 ```
 > 请求参数
 
@@ -126,24 +108,13 @@ GET /survey/v1/survey
         <td>门店ID</td>
     </tr>
     <tr>
-        <td>familyId</td>
-        <td>-</td>
-        <td>家庭ID</td>
-    </tr>
-    <tr>
         <td>customerId</td>
         <td>-</td>
         <td>检查人ID</td>
     </tr>
 </table>
 
-## 查看调查表
-
-```
-GET /survey/v1/survey/:id
-```
-
-## 创建调查表
+## 提交问卷
 
 ```
 POST /survey/v1/survey
@@ -160,9 +131,8 @@ POST /survey/v1/survey
     <tr>
         <td>type</td>
         <td>String</td>
-        <td>调查表类型</td>
         <td>是</td>
-        <td>-</td>
+        <td>调查表类型</td>
     </tr>
     <tr>
         <td>shopId</td>
@@ -177,15 +147,15 @@ POST /survey/v1/survey
         <td>顾客ID</td>
     </tr>
     <tr>
-        <td>itemList</td>
-        <td>List<SurveyItem></td>
+        <td>content</td>
+        <td>见上表</td>
         <td>是</td>
-        <td>调查表项目</td>
+        <td>问卷内容</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>-</td>
+        <td>备注</td>
     </tr>
 </table>
-
-## 删除调查表
-
-```
-DELETE /survey/v1/survey/:id
-```
