--- a/门店/签到/签到.md
+++ b/门店/签到/签到.md
@@ -70,6 +70,42 @@
         <td>doing("在店") ok("离店")</td>
         <td>-</td>
     </tr>
+    <tr>
+        <td>statusSurvey</td>
+        <td>bool</td>
+        <td>是否已做问卷</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>statusOptometry</td>
+        <td>bool</td>
+        <td>是否已开检查单</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>statusTreatment</td>
+        <td>bool</td>
+        <td>是否已开处置单</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>statusBill</td>
+        <td>bool</td>
+        <td>是否已付款</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>statusProcessing</td>
+        <td>bool</td>
+        <td>是否已开加工单</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>statusLeave</td>
+        <td>bool</td>
+        <td>是否已离开</td>
+        <td>-</td>
+    </tr>
 </table>
 
 ## 签到顾客
