--- a/门店/问卷/问卷.md
+++ b/门店/问卷/问卷.md
@@ -41,6 +41,24 @@
         <td>-</td>
     </tr>
     <tr>
+        <td>birthday</td>
+        <td>date</td>
+        <td>日期</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>bodyHeight</td>
+        <td>int</td>
+        <td>身高(厘米)</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>bodyWeight</td>
+        <td>int</td>
+        <td>体重(Kg)</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>content</td>
         <td>json<SurveyItem></td>
         <td>问卷内容</td>
